tests/error/comptime/check_slice_construction17.bz
// error: invalid memory range for a slice of type '[: i32]'
// note: while evaluating expression at compile time
// note: memory range contains objects outside their lifetime in this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		mut p: ?*i32 = null;
		mut q: ?*i32 = null;
		{
			let i = 0;
			p = &i;
			q = &i + 1;
		}
		__builtin_slice_from_ptrs(p, q);
	});
}
